@@ -1,5 +1,7 @@
 # Dealing With JDKs Above Version 8
 
+## Driver/Controller Class
+
 Java __9__ broke backward compatibility in an awful way.
 And each new JDK version seems breaking even more stuff :-(.
 One painful change was that self-attachment of Java-Agents (needed for bytecode instrumentation)
@@ -19,3 +21,16 @@ To use JDK __17__, besides passing `-Djdk.attach.allowAttachSelf=true`, you will
 `--add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED`
 
 isn't it lovely? 
+
+
+## evomaster.jar
+
+The recommended way to use _EvoMaster_ is via its installer, e.g.,
+_.msi_ for Windows.
+However, you can still use its _jar_ file directly, if you really want.
+Unfortunately, though, if you use JDK _17_ or above, you have to deal
+with `--add-opens` shenanigans. 
+
+To see how to set it up, look at the usage of `--add-opens` in  [makeExecutable.sh](../makeExecutable.sh) script. 
+
+
